[REFACTOR] Code cleaning